# commentpin-rust

./: Aptfile  Cargo.toml
src/: image_generator.rs  lib.rs  main.rs
